--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,15 +4,16 @@
     </a>
     <h1 class="logo">
         <a href="{{ site.baseurl }}/">
-            {{ site.name }} <span class="version">v2.0.0</span>
+            {{ site.name }} 
+            <!-- <span class="version">v2.0.0</span> -->
         </a>
     </h1>
     <a id="search" class="dosearch" role="button">
         <svg class="icon-search"><use xlink:href="#icon-search"></use></svg>
     </a>
-    <a href="https://github.com/thiagorossener/jekflix-template" class="get-theme" role="button">
+    <!-- <a href="https://github.com/thiagorossener/jekflix-template" class="get-theme" role="button">
         Get this theme!
-    </a>
+    </a> -->
 </header>
 
 <div id="mask" class="overlay"></div>
