--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer>
+<footer style="margin: auto; text-align: center;">
     <p>
       {% if site.github_username %}
         <a href="https://github.com/{{ site.github_username }}" title="Github">
@@ -35,7 +35,7 @@
     {% include links.html %}
 
     <p>
-      <span>Jekflix</span> was made with <svg class="love"><use xlink:href="#icon-heart"></use></svg> by <a href="https://rossener.com" target="_blank" class="creator">Thiago Rossener</a>
+      Modified by <span>Jason_Ma</span><br><span>Jekflix</span> was made with <svg class="love"><use xlink:href="#icon-heart"></use></svg> by <a href="https://rossener.com" target="_blank" class="creator">Thiago Rossener</a>
     </p>
 </footer>
 
