--- a/src/styl/_typo.styl
+++ b/src/styl/_typo.styl
@@ -5,6 +5,7 @@ mainFont(weight = 700)
   font-family 'Titillium Web', 'Helvetica Neue', Helvetica, sans-serif
   font-weight weight
   font-style normal
+  font-display fallback
 
 h1,h2,h3,h4
   mainFont()
