update footer style css

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer style="margin: auto; text-align: center;">
+<footer style="margin: auto;margin-top: 30px; text-align: center;">
     <p>
       {% if site.github_username %}
         <a href="https://github.com/{{ site.github_username }}" title="Github">
@@ -31,8 +31,9 @@
         </a>
       {% endif %}
     </p>
-
-    {% include links.html %}
+    <div style="display: inline;">
+      {% include links.html %}
+    </div>
 
     <p>
       Modified by <span>Jason_Ma</span><br><span>Jekflix</span> was made with <svg class="love"><use xlink:href="#icon-heart"></use></svg> by <a href="https://rossener.com" target="_blank" class="creator">Thiago Rossener</a>
