--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header class="bar-header">
-    <a id="menu" role="button">
+    <a id="menu" aria-label="menu" role="button">
         <svg id="open" class="icon-menu"><use xlink:href="#icon-menu"></use></svg>
     </a>
     <h1 class="logo">
@@ -8,7 +8,7 @@
             <!-- <span class="version">v2.0.0</span> -->
         </a>
     </h1>
-    <a id="search" class="dosearch" role="button">
+    <a id="search" class="dosearch" aria-label="search" role="button">
         <svg class="icon-search"><use xlink:href="#icon-search"></use></svg>
     </a>
     <!-- <a href="https://github.com/thiagorossener/jekflix-template" class="get-theme" role="button">
