--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -35,8 +35,9 @@
     {% include links.html %}
 
     <p>
-      Modified by <span>Jason_Ma</span><br><span>Jekflix</span> was made with <svg class="love"><use xlink:href="#icon-heart"></use></svg> by <a href="https://rossener.com" target="_blank" class="creator" rel="noreferrer">Thiago Rossener</a>
+      was made with <svg class="love"><use xlink:href="#icon-heart"></use></svg> by <a href="https://github.com/tatoma" target="_blank" class="creator" rel="noreferrer">Jason_Ma </a> theme by<a href="https://rossener.com" target="_blank" class="creator" rel="noreferrer">Thiago Rossener</a>
     </p>
+      
 </footer>
 
 {% assign social_urls = '' %}
